Fix Skills alignment and responsiveness

--- a/css/main.css
+++ b/css/main.css
@@ -160,26 +160,21 @@ a:focus {
 /* ---- Main Content---- */
 
 .content,
-#background,
-#skills {
+#background {
   display: flex;
   align-items: center;
   flex: 1 1 auto;
   flex-wrap: wrap;
   background-color: #fff;
   width: 100%;
-  margin: 0 auto 40px;
-}
-
-.content {
   max-width: 1000px;
+  margin: 0 auto 40px;
 }
 
 #background {
   max-width: 600px;
   text-align: center;
   padding: 20px;
-  margin-bottom: 40px;
 }
 
 #background p {
@@ -213,17 +208,11 @@ a:focus {
 
 /* ---- Skills ---- */
 
-.skills {
+#skills {
   width: 100%;
-  margin-bottom: 40px;
-  padding-bottom: 40px;
-}
-
-.skills-left {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
+  padding: 20px;
+  max-width: 800px;
+  margin: 0 auto 20px;
 }
 
 .skills-title {
@@ -231,21 +220,32 @@ a:focus {
   text-align: center;
 }
 
+.skills-box {
+  width: 100%;
+  margin-bottom: 40px;
+  padding-bottom: 40px;
+}
+
+.skills-left, .skills-right {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
 .skills-bullets {
-  margin: 0;
-  line-height: 1.25em;
+  margin: 0 0 0 20px;
+  line-height: 1.5em;
 }
 
 
 
 /* ---- Portfolio ---- */
 
-.portfolio {
+#code {
   width: 100%;
   padding: 20px;
   max-width: 1000px;
-  margin: 0 auto 40px;
-  
+  margin: 0 auto 40px;  
 }
 
 .portfolio-title {
@@ -350,13 +350,13 @@ a:focus {
 
 @media screen and (min-width: 650px) {
   
-  .skills,
+  .skills-box,
   .portfolio-item,
   .portfolio-item img {
     display: inline-flex;
+    justify-content: center;
   }
   
-  .skills-right,
   .portfolio-right {
     flex-grow: 2; /* text area will grow */
   }
